# IronCore

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  IRONCORE.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
demo/: __init__.py  __main__.py
docs/: ARCHITECTURE.md  CONFIG.md  CONTRACTS.md  MODELS.md  PLUGINS.md  PROTOCOLS.md  README.md  SAFETY.md  SKILLS.md  SPEC.md  TROUBLESHOOTING.md
docs/plans/: guided-decoding.md  instant-on-profiling.md
examples/skills/hello-skill/: SKILL.md
ironcore/: __init__.py  cli.py  headless.py  plugins.py  skills.py  term.py  update.py
ironcore/commands/: __init__.py  _helpers.py  base.py  builtins.py  envelopecmd.py  goalcmd.py  initcmd.py  lifecyclecmd.py  loopcmd.py  memorycmd.py  modelcmd.py  reviewcmd.py  skillcmd.py  workflowcmd.py
ironcore/config/: __init__.py  settings.py
ironcore/core/: __init__.py  approvals.py  budgets.py  compact.py  composer.py  engine.py  events.py  guided.py  ironcall.py  protocols.py  repair.py  resample.py  roles.py  sampling.py  state.py  steps.py  verify.py
ironcore/demo/: __init__.py  __main__.py  scenario.py
ironcore/envelope/: __init__.py  outcomes.py  probe_ctx.py  probe_edits.py  probe_ratio.py  probe_tools.py  probes.py  profile.py  runner.py  seed.py  suite.py
ironcore/memory/: __init__.py  handoff.py  sessions.py
ironcore/providers/: __init__.py  base.py  detect.py  mock.py  ollama.py  openai_compat.py  registry.py
ironcore/safety/: __init__.py  audit.py  commands.py  injection.py  jail.py  modes.py  policy.py  redact.py  risk.py  snapshots.py
ironcore/tools/: __init__.py  base.py  default.py  fetch.py  fs_read.py  fs_write.py  image.py  mcp.py  patch.py  search.py  shell.py  skill.py
ironcore/tui/: __init__.py  app.py  theme.py
ironcore/tui/screens/: __init__.py  approval.py  sessions.py
ironcore/tui/widgets/: __init__.py  diffview.py  inputbar.py  statusbar.py  transcript.py  workflowview.py
ironcore/workflows/: __init__.py  engine.py  schema.py  subagent.py
ironcore/workflows/builtin/: __init__.py  explain-repo.yaml  migrate.yaml  review.yaml
tests/: conftest.py  test_approvals.py  test_audit.py  test_budgets.py  test_builtin_workflows.py  test_cmd_goal.py  test_cmd_init.py  test_cmd_lifecycle.py  test_cmd_loop.py  test_cmd_memory.py  test_cmd_model.py  test_cmd_review.py  test_cmd_workflow.py  test_command_policy.py  test_commands.py  test_compact.py  test_composer.py  test_config.py  test_demo.py  test_docs_reference.py  test_doctor_truth.py  test_e2e_guided.py  test_e2e_instant_on.py  test_e2e_live_server.py  test_e2e_phase34.py  test_e2e_phase56.py  test_e2e_phase78.py  test_e2e_phase9_11.py  test_engine.py  test_engine_outcomes.py  test_engine_resample.py  test_engine_roles.py  test_envelope.py  test_envelope_resilience.py  test_envelope_seed.py  test_envelope_wiring.py  test_guided.py  test_handoff.py  test_headless.py  test_hermeticity.py  (+38 more)
tests/fixtures/: basic_session.jsonl  failure_session.jsonl
tests/providers/: test_detect.py  test_ollama.py  test_openai_compat.py  test_registry.py  test_toolcalls.py
tests/tools/: fake_mcp_server.py  test_default.py  test_fs_read.py  test_mcp_client.py  test_mcp_engine.py  test_mcp_tool.py  test_patch.py  test_read_image.py  test_search.py  test_shell.py
tests/tui/: test_app.py  test_diffview.py  test_sessions_screen.py  test_workflowview.py
tools/: make_screenshots.py
