[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ironcore"
version = "0.2.0"
description = "A frontier-grade terminal coding agent for open-source models. The intelligence is in the loop, not just the weights."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RealDealCPA" }]
keywords = [
  "ai",
  "agent",
  "cli",
  "tui",
  "coding-assistant",
  "ollama",
  "llama-cpp",
  "vllm",
  "open-source-models",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  # ironcore/py.typed ships: docs/PLUGINS.md tells third parties to write
  # against our types, and mypy/pyright ignore an installed package without it.
  "Typing :: Typed",
]
dependencies = [
  "textual>=0.80",
  # imported directly by 9 tui modules -- declared, not inherited from textual
  "rich>=13.0",
  "httpx>=0.27",
  # 2.10 stopped warning on `model_` field names (envelope.profile.model_id)
  "pydantic>=2.10",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/RealDealCPA-VR/IronCore"
Repository = "https://github.com/RealDealCPA-VR/IronCore"
Issues = "https://github.com/RealDealCPA-VR/IronCore/issues"

[project.scripts]
ironcore = "ironcore.cli:main"

[tool.hatch.build.targets.wheel]
# ironcore/demo lives inside the package on purpose: `ironcore demo` is what a
# stranger without a model runs first, so it has to exist after a pip install.
packages = ["ironcore"]

[tool.hatch.build.targets.sdist]
# Maintainer-internal artifacts: agent handoff logs, the build ledger, and CI /
# agent-harness config are not part of the source distribution.
exclude = ["HANDOFF.md", "TODO.md", ".github", ".agents", ".codex"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
# The default surface for a bare local `pytest --cov`: the packages SPEC §14 puts a
# floor under. CI measures WIDER — `--cov=ironcore --cov-fail-under=90` over the whole
# package (see .github/workflows/ci.yml), because a narrow gate let untested code land
# in tools/, plugins/ and commands/ with everything green.
source = ["ironcore/core", "ironcore/safety", "ironcore/envelope"]

[tool.coverage.report]
show_missing = true
